standards/gnds-2.0-alpha/alpha/c/src/v2.0/mean/ScatteringFactor.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ remark
// Constructs you're LESS likely to care about are preceded with:
//    // --- remark
// Anything not marked as above can be ignored by most users.
//
// ScatteringFactor is the basic handle type in this file. Example:
//    // Create a default ScatteringFactor object:
//    ScatteringFactor handle = ScatteringFactorDefault();
// Functions involving ScatteringFactor are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_ALPHA_V2_0_MEAN_SCATTERINGFACTOR
#define C_INTERFACE_ALPHA_V2_0_MEAN_SCATTERINGFACTOR

#include "GNDStk.h"
#include "v2.0/common/XYs1d.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct ScatteringFactorClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ ScatteringFactor
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct ScatteringFactorClass *ScatteringFactor;

// --- Const-aware handles.
typedef const struct ScatteringFactorClass *const ConstHandle2ConstScatteringFactor;
typedef       struct ScatteringFactorClass *const ConstHandle2ScatteringFactor;
typedef const struct ScatteringFactorClass *      Handle2ConstScatteringFactor;
typedef       struct ScatteringFactorClass *      Handle2ScatteringFactor;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstScatteringFactor
ScatteringFactorDefaultConst();

// +++ Create, default
extern_c Handle2ScatteringFactor
ScatteringFactorDefault();

// --- Create, general, const
extern_c Handle2ConstScatteringFactor
ScatteringFactorCreateConst(
   ConstHandle2ConstXYs1d XYs1d
);

// +++ Create, general
extern_c Handle2ScatteringFactor
ScatteringFactorCreate(
   ConstHandle2ConstXYs1d XYs1d
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
ScatteringFactorAssign(ConstHandle2ScatteringFactor This, ConstHandle2ConstScatteringFactor from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
ScatteringFactorDelete(ConstHandle2ConstScatteringFactor This);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
ScatteringFactorRead(ConstHandle2ScatteringFactor This, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
ScatteringFactorWrite(ConstHandle2ConstScatteringFactor This, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
ScatteringFactorPrint(ConstHandle2ConstScatteringFactor This);

// +++ Print to standard output, as XML
extern_c int
ScatteringFactorPrintXML(ConstHandle2ConstScatteringFactor This);

// +++ Print to standard output, as JSON
extern_c int
ScatteringFactorPrintJSON(ConstHandle2ConstScatteringFactor This);


// -----------------------------------------------------------------------------
// Child: XYs1d
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ScatteringFactorXYs1dHas(ConstHandle2ConstScatteringFactor This);

// --- Get, const
extern_c Handle2ConstXYs1d
ScatteringFactorXYs1dGetConst(ConstHandle2ConstScatteringFactor This);

// +++ Get, non-const
extern_c Handle2XYs1d
ScatteringFactorXYs1dGet(ConstHandle2ScatteringFactor This);

// +++ Set
extern_c void
ScatteringFactorXYs1dSet(ConstHandle2ScatteringFactor This, ConstHandle2ConstXYs1d XYs1d);


// -----------------------------------------------------------------------------
// Custom functionality
// -----------------------------------------------------------------------------

#include "v2.0/mean/ScatteringFactor/src/custom.h"

#undef extern_c
#endif